overflow fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -106,7 +106,6 @@ ul, ol {
     width:100%;
     z-index: 99990;
     background-color: #FFF;
-    overflow:
     /*background-color: #0062ff;*/
 }
 
